# rrutherford4

./: .gitignore  .pre-commit-config.yaml  README.md  _publish.yml  _quarto.yaml  about.qmd  index.qmd  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.devcontainer/dev-build/: postCreateCommand.sh
.github/workflows/: pre-commit.yml  publish.yml
_extensions/ArthurData/confetti/: confetti.js
class/cisc2200-fall24/: index.qmd  resources.qmd  schedule.qmd
class/cisc2200-fall24/quiz/1/: index.qmd  page1.csv  page1.ipynb  page2.csv  page2.ipynb  page3.csv  page3.ipynb  totals.csv  totals.ipynb
howto/: docker.qmd  shell.qmd  vscode.qmd
