[tool.poetry]
package-mode = false

[tool.poe.tasks.shell]
help = "Run an interactive shell in the devcontainer"
cmd = "docker run -it --rm -p 8080:8080 -u vscode -v $PWD:/home/app -w /home/app ghcr.io/cameronrutherford/quarto-ci:latest /bin/bash"

[tool.poe.tasks.render]
help = "Run quarto render"
cmd = "docker run --rm -u vscode -v $PWD:/home/app -w /home/app ghcr.io/cameronrutherford/quarto-ci:latest quarto render"

[tool.poe.tasks.preview]
help = "Run quarto preview to show pages preview"
cmd = "docker run --rm -p 8080:8080 -u vscode -v $PWD:/home/app -w /home/app ghcr.io/cameronrutherford/quarto-ci:latest quarto preview --port 8080 --no-browser --host 0.0.0.0"
