[tool.poetry]
# Not installing a package / developing a package, just managing complexity...
package-mode = false
name = "Fordham Website"
version = "0.1.0"
description = ""
authors = ["cameronrutherford"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
matplotlib = "*"
jupyterlab = "^4.0.0"

# Poe The Poet Configuration / Scripts

# -- JupyterLab
poethepoet = "^0.30.0"
[tool.poe.tasks.jupyter]
help = "Launch JupyterLab in the poetry venv"
cmd = "jupyter lab"

# -- Documentation
[tool.poe.tasks.shell]
help = "Run an interactive shell in the devcontainer"
cmd = "docker run -it --rm -p 8080:8080 -u vscode -v $PWD:/home/app -w /home/app ghcr.io/cameronrutherford/quarto-ci:latest /bin/bash"

[tool.poe.tasks.render]
help = "Run quarto render"
cmd = "docker run -it --rm -u vscode -v $PWD:/home/app -w /home/app ghcr.io/cameronrutherford/quarto-ci:latest quarto render"

[tool.poe.tasks.preview]
help = "Run quarto preview to show pages preview"
cmd = "docker run -it --rm -p 8080:8080 -u vscode -v $PWD:/home/app -w /home/app ghcr.io/cameronrutherford/quarto-ci:latest quarto preview --port 8080 --no-browser --host 0.0.0.0"

[tool.poe.tasks.qrp]
help = "Combine poe render and poe preview into one command"
sequence = ["render", "preview"]
